[package]
name = "process-orchestrator"
version = "0.1.0"
authors = ["James Harrison <james_c_harrison@hotmail.com>"]
edition = "2018"

[dependencies]
structopt = { version = "0.3" }
serde = { version = "1.0.126", features = ["derive"] }
serde_yaml = "0.8.17"
ctrlc = "3.1.9"
windows-service = "0.3.1"
log = { version = "0.4", features = ["std", "serde"] }
simplelog = "0.10.0"
winapi = { version = "0.3.9", features = ["psapi", "processthreadsapi"] }
nanoid = "0.4.0"
chrono = "0.4.19"